Spacing issue for My OpenLab link. See #1020

--- a/wp-content/themes/citytech/style.css
+++ b/wp-content/themes/citytech/style.css
@@ -864,7 +864,7 @@ input.wpcf7-submit,.filter input[type="submit"] {
     text-decoration:none;
 }
 
-#header ul.nav li:first-child a {
+#header ul.nav#menu-main-menu li:first-child a {
     padding-left:0;
 }
 
